[tool.poetry]
name = "mastodon-stats"
version = "0.1.0"
description = ""
authors = ["Micah Lee <micah@micahflee.com>"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "mastodon_stats"}]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.1"
matplotlib = "^3.6.2"
numpy = "^1.23.5"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
